Made the following styling changes: * Adjusted margin top for form row to add space between elements above it. * Updated class selector for input to include both text and date types. * Added margin-left and margin-right for modal form in mobile view. * Added rule for form-row class in desktop view so flex direction is row,   margins are are added, and align-items is set to flex-start to avoid   stretching.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -121,7 +121,8 @@ body {
     flex-wrap: wrap;
 }
 
-.form-row input[type='text'] {
+.form-row input[type='text'],
+.form-row input[type='date'] {
     background-color: #FFFFFF;
     border: 1px solid #D6D9DC;
     border-radius: 3px;
@@ -131,6 +132,7 @@ body {
 }
 
 .form-row label {
+    margin-top: 15px;
     margin-bottom: 10px;
 }
 
@@ -173,6 +175,11 @@ h4 {
     
     /* Need this for close button. */
     position: relative;
+}
+
+.modal-form {
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .modal-main {
@@ -266,8 +273,27 @@ h4 {
         margin-bottom: 30px;
     }
 
+    .form-row {
+        flex-direction: row;
+        align-items: flex-start; /* To avoid stretching. */
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
     .form-row input[type='text'] {
-        width: 96%;
+        width: 380px;
+        height: initial;
+    }
+
+    .form-row input[type='date'] {
+        width: 360px;
+        height: initial;
+    }
+
+    .form-row label {
+        text-align: right;
+        margin-top: 7px;
+        padding-right: 20px;
     }
 
     .header {
@@ -292,7 +318,7 @@ h4 {
     }
 
     .modal-form {
-        margin-left: 10px;
+        margin-left: 20px;
     }
 
     .modal-main {
